added create.sql a model for starting version of the project . improved some parts of the classes